--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jorge-word-count",
   "main": "./lib/jorge-word-count",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Word count package example",
-  "activationHooks": ["language-javascript:grammar-used",
-     "language-coffeescript:grammar-used"],
-  "keywords": [
+  "activationHooks": [
+    "language-javascript:grammar-used",
+    "language-coffeescript:grammar-used"
   ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "jorge-word-count:toggle"
   },
@@ -15,6 +16,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
